<resources>

    <string name="app_name">Ivanpah</string>

    <string name="time_format12">h:mm</string>
    <string name="time_format24">h:mm</string>

    <string name="date_format12">EEEE, MMMM d</string>
    <string name="date_format24">EEEE, MMMM d</string>

    <string name="placeholder">-</string>
    <string name="bluetooth_name">Ivanpah Smart Mirror</string>
    <string name="no_bluetooth">Sorry, Ivanpah only works on bluetooth enabled devices</string>

    <string name="setup_welcome">Welcome to Ivanpah! Please configure your device.</string>
    <string name="setup_device">How will this device be used?</string>
    <string name="setup_mirror">Smart Mirror</string>
    <string name="setup_phone">Mirror controller</string>
    <string name="setup_go">Start</string>
    <string name="setup_select">Please select a configuration!</string>

    <string name="control_status">Bluetooth: </string>
    <string name="control_send">Set Alarm</string>
    <string name="control_settings">C</string>
    <string name="control_cancel">Cancel Alarm</string>
    <string name="control_launch_duo">Launch Duolingo</string>
    <string name="control_cancel_duo">Cancel Duolingo</string>
    <string name="control_retry">Retry</string>
    <string name="control_enable_duolingo">Duolingo on Wakeup</string>

    <string name="status_connect">connected</string>
    <string name="status_searching">searching...</string>
    <string name="status_error">error</string>
    <string name="status_disconnect">not connected</string>
    <string name="status_not_found">no mirrors found</string>
    <string name="status_found">mirror found</string>
    <string name="status_no_bluetooth">disabled</string>

    <string name="alarm_icon">T</string>
    <string name="alarm_test">-</string>

    <!-- Strings for memory !-->
    <string name="config">config</string>
    <string name="prefs">SHARED_PREF_1</string>

    <!-- Weather icons used by weather font !-->
    <string name="wi_day_sunny">&#xf00d;</string>
    <string name="wi_day_cloudy">&#xf002;</string>
    <string name="wi_day_cloudy_gusts">&#xf000;</string>
    <string name="wi_day_cloudy_windy">&#xf001;</string>
    <string name="wi_day_fog">&#xf003;</string>
    <string name="wi_day_hail">&#xf004;</string>
    <string name="wi_day_haze">&#xf0b6;</string>
    <string name="wi_day_lightning">&#xf005;</string>
    <string name="wi_day_rain">&#xf008;</string>
    <string name="wi_day_rain_mix">&#xf006;</string>
    <string name="wi_day_rain_wind">&#xf007;</string>
    <string name="wi_day_showers">&#xf009;</string>
    <string name="wi_day_sleet">&#xf0b2;</string>
    <string name="wi_day_sleet_storm">&#xf068;</string>
    <string name="wi_day_snow">&#xf00a;</string>
    <string name="wi_day_snow_thunderstorm">&#xf06b;</string>
    <string name="wi_day_snow_wind">&#xf065;</string>
    <string name="wi_day_sprinkle">&#xf00b;</string>
    <string name="wi_day_storm_showers">&#xf00e;</string>
    <string name="wi_day_sunny_overcast">&#xf00c;</string>
    <string name="wi_day_thunderstorm">&#xf010;</string>
    <string name="wi_day_windy">&#xf085;</string>
    <string name="wi_solar_eclipse">&#xf06e;</string>
    <string name="wi_hot">&#xf072;</string>
    <string name="wi_day_cloudy_high">&#xf07d;</string>
    <string name="wi_day_light_wind">&#xf0c4;</string>
    <string name="wi_night_clear">&#xf02e;</string>
    <string name="wi_night_alt_cloudy">&#xf086;</string>
    <string name="wi_night_alt_cloudy_gusts">&#xf022;</string>
    <string name="wi_night_alt_cloudy_windy">&#xf023;</string>
    <string name="wi_night_alt_hail">&#xf024;</string>
    <string name="wi_night_alt_lightning">&#xf025;</string>
    <string name="wi_night_alt_rain">&#xf028;</string>
    <string name="wi_night_alt_rain_mix">&#xf026;</string>
    <string name="wi_night_alt_rain_wind">&#xf027;</string>
    <string name="wi_night_alt_showers">&#xf029;</string>
    <string name="wi_night_alt_sleet">&#xf0b4;</string>
    <string name="wi_night_alt_sleet_storm">&#xf06a;</string>
    <string name="wi_night_alt_snow">&#xf02a;</string>
    <string name="wi_night_alt_snow_thunderstorm">&#xf06d;</string>
    <string name="wi_night_alt_snow_wind">&#xf067;</string>
    <string name="wi_night_alt_sprinkle">&#xf02b;</string>
    <string name="wi_night_alt_storm_showers">&#xf02c;</string>
    <string name="wi_night_alt_thunderstorm">&#xf02d;</string>
    <string name="wi_night_cloudy">&#xf031;</string>
    <string name="wi_night_cloudy_gusts">&#xf02f;</string>
    <string name="wi_night_cloudy_windy">&#xf030;</string>
    <string name="wi_night_fog">&#xf04a;</string>
    <string name="wi_night_hail">&#xf032;</string>
    <string name="wi_night_lightning">&#xf033;</string>
    <string name="wi_night_partly_cloudy">&#xf083;</string>
    <string name="wi_night_rain">&#xf036;</string>
    <string name="wi_night_rain_mix">&#xf034;</string>
    <string name="wi_night_rain_wind">&#xf035;</string>
    <string name="wi_night_showers">&#xf037;</string>
    <string name="wi_night_sleet">&#xf0b3;</string>
    <string name="wi_night_sleet_storm">&#xf069;</string>
    <string name="wi_night_snow">&#xf038;</string>
    <string name="wi_night_snow_thunderstorm">&#xf06c;</string>
    <string name="wi_night_snow_wind">&#xf066;</string>
    <string name="wi_night_sprinkle">&#xf039;</string>
    <string name="wi_night_storm_showers">&#xf03a;</string>
    <string name="wi_night_thunderstorm">&#xf03b;</string>
    <string name="wi_lunar_eclipse">&#xf070;</string>
    <string name="wi_stars">&#xf077;</string>
    <string name="wi_storm_showers">&#xf01d;</string>
    <string name="wi_thunderstorm">&#xf01e;</string>
    <string name="wi_night_alt_cloudy_high">&#xf07e;</string>
    <string name="wi_night_cloudy_high">&#xf080;</string>
    <string name="wi_night_alt_partly_cloudy">&#xf081;</string>
    <string name="wi_cloud">&#xf041;</string>
    <string name="wi_cloudy">&#xf013;</string>
    <string name="wi_cloudy_gusts">&#xf011;</string>
    <string name="wi_cloudy_windy">&#xf012;</string>
    <string name="wi_fog">&#xf014;</string>
    <string name="wi_hail">&#xf015;</string>
    <string name="wi_rain">&#xf019;</string>
    <string name="wi_rain_mix">&#xf017;</string>
    <string name="wi_rain_wind">&#xf018;</string>
    <string name="wi_showers">&#xf01a;</string>
    <string name="wi_sleet">&#xf0b5;</string>
    <string name="wi_snow">&#xf01b;</string>
    <string name="wi_sprinkle">&#xf01c;</string>
    <string name="wi_snow_wind">&#xf064;</string>
    <string name="wi_smog">&#xf074;</string>
    <string name="wi_smoke">&#xf062;</string>
    <string name="wi_lightning">&#xf016;</string>
    <string name="wi_raindrops">&#xf04e;</string>
    <string name="wi_raindrop">&#xf078;</string>
    <string name="wi_dust">&#xf063;</string>
    <string name="wi_snowflake_cold">&#xf076;</string>
    <string name="wi_wind">&#xf021;</string>
    <string name="wi_strong_wind">&#xf050;</string>
    <string name="wi_sandstorm">&#xf082;</string>
    <string name="wi_earthquake">&#xf0c6;</string>
    <string name="wi_fire">&#xf0c7;</string>
    <string name="wi_flood">&#xf07c;</string>
    <string name="wi_meteor">&#xf071;</string>
    <string name="wi_tsunami">&#xf0c5;</string>
    <string name="wi_volcano">&#xf0c8;</string>
    <string name="wi_hurricane">&#xf073;</string>
    <string name="wi_tornado">&#xf056;</string>
    <string name="wi_umbrella">&#xf084;</string>
    <string name="wi_thermometer_exterior">&#xf053;</string>


</resources>
